--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <h2>License</h2>
                             <p>Licensed under Apache 2.0</p>
                             <p><b>ofdl</b> is <b>free software</b>.
-                                Most of the code is under the <a href=""><b>Apache 2.0</b></a> license.
+                                Most of the code is under the <a href="https://www.apache.org/licenses/LICENSE-2.0"><b>Apache 2.0</b></a> license.
                                 ofdl is considered freeware. If you have paid for this software: request a refund. You have been scammed.
                                 ofdl uses packages that may have different licenses, see <a href="licensing.html">licensing</a> for more details.
                             </p>
