prep for beta 1.0

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <td>
                             <h1>ofdl - an onlyfans downloader</h1>
                             <p><b>ofdl</b> is a GUI file downloader for archiving OnlyFans media.</p>
-                            <p><b>Download ofdl VERSION for Windows x64 (64-bit)</b>:</p>
+                            <p><b>Download ofdl beta 1.0 for Windows x64 (64-bit)</b>:</p>
                             <table cellspacing="1" cellpadding="6" border="0">
                                 <tr>
                                     <th class="Title" align="center" width="60">Link</th>
@@ -54,14 +54,14 @@
                                     <th class="Title" align="center" width="76">Size</th>
                                 </tr>
                                 <tr>
-                                    <td class="Item" align="center"><a href="">Download</a></td>
+                                    <td class="Item" align="center"><a href="">Coming Soon</a></td>
                                     <td class="Item" align="center">.zip</td>
                                     <td class="Item" align="center">64-bit x64</td>
-                                    <td class="Item" align="center">SIZE</td>
+                                    <td class="Item" align="center">TBD</td>
                                 </tr>
                             </table>
                             <br>
-                            <p><b>Download ofdl VERSION for other Windows platforms (32-bit x86 or ARM64)</b>:</p>
+                            <p><b>Download ofdl beta 1.0 for other Windows platforms (32-bit x86)</b>:</p>
                             <table cellspacing="1" cellpadding="6" border="0">
                                 <tr>
                                     <th class="Title" align="center" width="60">Link</th>
@@ -70,25 +70,25 @@
                                     <th class="Title" align="center" width="76">Size</th>
                                 </tr>
                                 <tr>
-                                    <td class="Item" align="center"><a href="">Download</a></td>
+                                    <td class="Item" align="center"><a href="">Coming Soon</a></td>
                                     <td class="Item" align="center">.zip</td>
                                     <td class="Item" align="center">32-bit x86</td>
-                                    <td class="Item" align="center">SIZE</td>
+                                    <td class="Item" align="center">TBD</td>
                                 </tr>
-                                <tr>
+                                <!-- <tr>
                                     <td class="Item" align="center"><a href="">Download</a></td>
                                     <td class="Item" align="center">.zip</td>
                                     <td class="Item" align="center">64-bit ARM64</td>
                                     <td class="Item" align="center">SIZE</td>
-                                </tr>
+                                </tr> -->
                             </table>
                             <P>You can download latest versions of ofdl from GitHub:</P>
                                 <P><A href="https://github.com/softbytesize/ofdl-Releases/releases/latest">Latest ofdl Release at GitHub</A></P>
                                 <P><A href="https://github.com/softbytesize/ofdl-Releases">ofdl Releases at GitHub</A></P>
                                 
                                 <P>You can download any versions of ofdl from SourceForge:</P>
-                                <P><A href="https://sourceforge.net/projects/ofdl/files/">ofdl files at SourceForge</A></P>
-                                <P><A href="https://sourceforge.net/projects/ofdl/">ofdl at SourceForge</A></P>
+                                <P><A href="https://sourceforge.net/projects/ofdl/files/">ofdl files at SourceForge</A> < WIP</P>
+                                <P><A href="https://sourceforge.net/projects/ofdl/">ofdl at SourceForge</A> < WIP</P>
                             <h2>License</h2>
                             <p>Licensed under Apache 2.0</p>
                             <p><b>ofdl</b> is <b>free software</b>.
@@ -127,7 +127,7 @@
                                 </tr>
                                 <tr class="News">
                                     <td class="NewsText" colspan="2">
-                                        <a href="">History of ofdl changes</a><br>
+                                        <a href="https://github.com/softbytesize/ofdl-Releases/blob/main/CHANGELOG">History of ofdl changes</a><br>
                                     </td>
                                 </tr>
                             </table>
