--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                                     <td class="NewsDate">release date</td>
                                 </tr>
                                 <tr class="News">
-                                    <td>version</td>
-                                    <td>date</td>
+                                    <td>beta 1.0</td>
+                                    <td>TBD</td>
                                 </tr>
                             </table>
                             <br>
